# kernel-method-rs

./: Cargo.toml  README.md
src/: add.rs  ard.rs  bias.rs  constant.rs  convolutional.rs  exponential.rs  instant.rs  lib.rs  linear.rs  mul.rs  periodic.rs  prelude.rs  rbf.rs  spectral_mixture.rs
src/ard/: README.md  mod.rs
src/neural_network/: deep_neural_network.rs  mod.rs  relu.rs
src/ops/: add.rs  mul.rs
src/traits/: ln_params_differentiable.rs  ln_value_differentiable.rs  mod.rs  params_differentiable.rs  value_diff.rs  value_differentiable.rs
