[package]
name = "opensrdk-kernel-method"
version = "0.2.1"
authors = ["Kimura Yu <33382781+KimuraYu45z@users.noreply.github.com>"]
edition = "2018"
description = "Standard Kernel Method library for OpenSRDK toolchain."
repository = "https://github.com/OpenSRDK/kernel-method-rs"
license = "Apache-2.0"
keywords = ["machine-learning"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
thiserror = "1.0.28"
opensrdk-linear-algebra = "0.8.2"
